# rust-notes

./: README.md  cr.md
examples/guessing_game/: Cargo.toml  README.md
examples/guessing_game/src/: main.rs
examples/hello-rust/: Cargo.toml  README.md
examples/hello-rust/src/: main.rs
examples/numbers/: Cargo.toml
examples/numbers/src/: lib.rs
frameworks/: README.md  cr.md
frameworks/actix-web/: README.md
frameworks/actix-web/blog-actix/: READEME.md  blog.db
frameworks/actix-web/blog-actix/migrations/2020-02-29-222622_create_users/: up.sql
frameworks/actix-web/blog-actix/migrations/2020-03-02-144056_create_posts/: up.sql
frameworks/actix-web/blog-actix/migrations/2020-03-05-015517_create_comments/: up.sql
frameworks/actix-web/blog-actix/src/: errors.rs  lib.rs  main.rs  models.rs  routes.rs
frameworks/actix-web/blog-actix/src/routes/: comments.rs
frameworks/actix-web/hello/: Cargo.toml  README.md
frameworks/actix-web/hello/src/: main.rs
frameworks/actix-web/hello_world/: Cargo.toml
frameworks/actix-web/hello_world/src/: main.rs
frameworks/actix-web/messages-actix/: README.md
frameworks/actix-web/messages-actix-stateful/: Cargo.toml
frameworks/actix-web/messages-actix-stateful/src/: lib.rs  main.rs
frameworks/actix-web/messages-actix/src/: main.rs
frameworks/actix/messages-actix/: Cargo.toml
frameworks/actix/messages-actix-stateful/: Cargo.toml  README.md
frameworks/actix/v1/blog-actix/: Cargo.toml  READEME.md  blog.db
frameworks/actix/v1/blog-actix/migrations/2020-02-29-225643_index_username/: down.sql
frameworks/actix/v1/blog-actix/src/: lib.rs  main.rs  models.rs  routes.rs
frameworks/actix/v1/blog-actix/src/routes/: posts.rs  users.rs
frameworks/actix/v1/messages-actix/: Cargo.toml
frameworks/actix/v1/messages-actix-stateful/: ':noh  Cargo.toml
frameworks/actix/v1/messages-actix-stateful/src/: lib.rs  main.rs
frameworks/actix/v1/messages-actix/src/: lib.rs  main.rs
frameworks/actix/v3/messages-actix/: Cargo.toml
frameworks/actix/v3/messages-actix-stateful/src/: lib.rs  main.rs
frameworks/actix/v3/messages-actix/src/: lib.rs  main.rs
frameworks/yew/: README.md
frameworks/yew/components/: Cargo.toml  index.css  index.css.map  index.html  index.scss
frameworks/yew/components/src/: app.rs  click_msg_component.rs  main.rs  no_props.rs  no_props_component.rs  some_model.rs  some_model_component.rs  some_props_component.rs
frameworks/yew/trunk/: README.md
frameworks/yew/trunk/hello_trunk/: Cargo.toml  README.md  index.css  index.css.map  index.html
frameworks/yew/trunk/hello_trunk/src/: main.rs
hello-rust/: Cargo.toml
lang/automated_tests/: Cargo.toml  README.md
lang/automated_tests/src/: lib.rs  main.rs
lang/automated_tests/tests/: integration_tests.rs
lang/cargo_toml/: Cargo.toml
lang/collections/: README.md
lang/collections/src/: hash_maps.rs  main.rs  strings.rs  vectors.rs
lang/control_flow/: README.md
lang/control_flow/src/: main.rs
lang/data_types/: README.md
lang/data_types/src/: main.rs
lang/enums_pattern_matching/: README.md
lang/enums_pattern_matching/src/: main.rs
lang/error_handling/: README.md  hello.txt
lang/error_handling/src/: main.rs
lang/functions/: README.md
lang/functions/src/: main.rs
lang/generics_traits_lifetimes/: README.md
lang/generics_traits_lifetimes/src/: lifetimes.rs  main.rs  traits.rs
lang/io/buf_reader_writer/: Cargo.toml  foo.txt
lang/io/buf_reader_writer/src/: main.rs
lang/minigrep/: README.md  poem.txt
lang/minigrep/src/: lib.rs  main.rs
lang/numbers/: Cargo.toml
lang/numbers/src/: lib.rs
lang/ownership/: Cargo.toml  README.md
lang/ownership/src/: main.rs
lang/packages_creates_modules/: Cargo.toml  README.md
lang/packages_creates_modules/src/: front_of_house.rs  lib.rs
lang/packages_creates_modules/src/front_of_house/: hosting.rs
lang/should_fail/: Cargo.toml
lang/should_fail/src/: main.rs
lang/structs/: README.md
lang/structs/src/: main.rs
numbers/src/: lib.rs  main.rs
wasm/: README.md
wasm/do-addition/: Cargo.toml  build.sh  cr.md  serve.py
wasm/do-addition/src/: lib.rs
wasm/do-addition/www/: index.html
wasm/do-nothing/: Cargo.toml  cr.md
wasm/hello-bindgen/: Cargo.toml  cr.md
wasm/hello-bindgen/hello-bindgen-app/: index.js  package-lock.json  package.json
wasm/hello-bindgen/src/: lib.rs
wasm/hello-raw/: Cargo.toml  build.sh  cr.md
wasm/hello-raw/src/: lib.rs
wasm/hello-raw/www/: hello_raw.wasm  index.html
wasm/hurl/: Cargo.toml  cr.md
wasm/hurl/src/: app.rs  main.rs
wasm/tutorial/: README.md
wasm/tutorial/wasm-game-of-life/: Cargo.toml  LICENSE_MIT
wasm/tutorial/wasm-game-of-life/src/: lib.rs
wasm/tutorial/wasm-game-of-life/www/: index.js  package-lock.json  package.json
