[package]
name = "do-nothing"
version = "0.1.0"
authors = ["Conal RYAN <conaleryan@gmail.com>"]
edition = "2018"

# We need to specify that our library will be a C dynamic library as this is the type of compilation format that Wasm uses.
# Depending on the target architecture this is also how you would build a .so on Linux or .dylib on Mac OS. 
# We do this by adding the lib section to our Cargo.toml:
[lib]
crate-type = ["cdylib"]

[dependencies]
