[package]
name = "hurl"
version = "0.1.0"
authors = ["You Me <youme@email.com>"]
edition = "2018"

[dependencies]
structopt = "0.3" # command line argument parsing, and much more.
heck = "0.3" # converting strings to different cases (e.g. snake_case, camelCase).
log = "0.4" # logging facade for outputting verbose information.
pretty_env_logger = "0.3" # logging implementation that works with log.
serde = "1.0" # (de)serialization of data.
serde_json = "1.0" # serde for JSON data.
reqwest = "0.9.20" # HTTP client.
rpassword = "4.0" # ask a user for a password without echoing it to the terminal.
