[package]
# Crate names are allowed to contain hyphens and underscores,
# but identifies are not allowed to contain hyphens.
# Compiler knows to look for hyphen if an underscore cannot be found.
name = "messages-actix-stateful"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="1.0"
env_logger="0.6"
serde={version="1.0",features=["derive"]}
serde_json="1.0"
