[package]
name = "messages-actix"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="3"
# turn on/off the logging features of actix.
env_logger="0.8"
# de facto standard way of implementing serialization and deserialization between native Rust types and a variety of formats.
serde={version="1.0",features=["derive"]}
# to enable marshalling to/from JSON, we bring in the serde_json crate.
serde_json="1.0"
